2005-04-08  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xml.cpp (setupStackFrames): delete the XML
	parsed data after setting up the stack frames.
	* gameswf/gameswf_movie.cpp: Make sure the files exist, and is a
	valid JPEG before trying to read it.

2005-04-06  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_movie.cpp: New data structure to hold MCL data
	for GetProgress().

2005-04-03  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xml.cpp (setupStackFrames): Grab nodeValue for
	all elements if there is any.
	* gameswf/gameswf_action.cpp (MATH_WRAP_FUNC): Return an
	as_value.
	(call_method) Needs to check if the method is a NUMBER.
	* gameswf/gameswf_xml.cpp (extractNode): Add some filtering of
	bogus data content (just a CR) that seems to be creeping in from
	libxml. This gets rid of the extraneous "undefined" fields. Free
	the pointer after calling xmlParseFile.

	* gameswf/gameswf_xml.cpp: Free xml doc pointer after parsing.
	
2005-04-02  Rob Savoye  <rob@bertha.welcomehome.org>

	* configure.ac: Add --disable-xml option to not look for XML or
	use the XML and XMLSocket AS objects. The default is to support
	XML, since it's part of SWF v6.
	* configure: Regenerated.
	* gameswf/gameswf_test_ogl.cpp (main): Ad "-c" option to turn off
	SDL Parachutes, because sometimes we want the core file for
	debugging.
	* gameswf/gameswf_action.cpp: Remove object creation code for new
	AS objects.
	* gameswf/gameswf_xml.cpp (xml_new): Move code from
	gameswf_action.cpp to here so we create new objects correctly using
	constructors.
	* gameswf/gameswf_string.cpp (string_new): Move code from
	gameswf_action.cpp to here so we create new objects correctly using
	constructors.
	* gameswf/gameswf_movie.cpp (moviecliploader_new): Move code from
	gameswf_action.cpp to here so we create new objects correctly using
	constructors.
	* gameswf/gameswf_xmlsocket.cpp (xmlsocket_new):  Move code from